--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import kysNowImage from '/public/kysnow.jpg';
 	<body>
 		<Header />
 		<main>
-		<Image src={kysNowImage} alt="You should keep yourself safe NOW!" />
+		<img src={kysNowImage} alt="You should keep yourself safe NOW!" />
 			<h1>🧑‍🚀 Hello, Astronaut!</h1>
 			<p>
 				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
