--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import kysNowImage from './kysnow.jpg';
   <body>
     <Header />
     <main style="display: flex; justify-content: center; align-items: center; min-height: 80vh;">
-      <img src={kysNowImage} alt="You should keep yourself safe NOW!" style="max-width: 100%; height: auto;" />
+      <img src={kysNowImage} alt="" style="max-width: 100%; height: auto;" />
     </main>
     <Footer />
   </body>
