--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import BaseHead from '../components/BaseHead.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import kysNowImage from './kysnow.jpg'; // Adjust path if needed
 ---
@@ -15,5 +16,5 @@ import kysNowImage from './kysnow.jpg'; // Adjust path if needed
 </main>
     </main>
     <Footer />
-  </body>   
+  </body>
 </html>
