--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
-import Header from
-import Footer from
+import Header from '../components/Header.astro
+import Footer from '../components/Footer.astro
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import kysNowImage from './kysnow.jpg'; // Adjust path if needed
 ---
