--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import Header from
+import Footer from
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import kysNowImage from './kysnow.jpg'; // Adjust path if needed
 ---
@@ -10,6 +10,12 @@ import kysNowImage from './kysnow.jpg'; // Adjust path if needed
 <html lang="en">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+	<style>
+		body 
+		{
+			background-color: black;
+		}
+	</style>
   </head>
   <body>
     <Header />
