--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,8 @@ const today = new Date();
 <style>
     footer {
         padding: 2em 1em 6em 1em;
-        background: linear-gradient(var(--gray-gradient)) no-repeat;
+        background: #000;
         color: rgb(var(--gray));
         text-align: center;
     }
+</style>
