--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,10 +12,10 @@ import kysNowImage from './kysnow.jpg'; // Adjust path if needed
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
     <style>
       html, body {
-        background: #000;
+        background: #19181b;
         margin: 0;
         padding: 0;
-        height: 100%;
+        height: 300%;
       }
     </style>
   </head>
