--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ const today = new Date();
 <style>
     footer {
         padding: 2em 1em 6em 1em;
-        background: #000;
+        background: #19181b;
         color: rgb(var(--gray));
         text-align: center;
     }
