--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,7 @@ const today = new Date();
 ---
 
 <footer>
+Keep yourself safe! Not sanctioned by Low Tier God, move over FEGLI.
 </footer>
 <style>
     footer {
