--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ Keep yourself safe! Not sanctioned by Low Tier God, move over FEGLI.
     footer {
         padding: 2em 1em 6em 1em;
         background: #19181b;
-        color: rgb(var(--gray));
+        color: rgb(var(--white));
         text-align: center;
     }
 </style>
