--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,13 +3,15 @@ const today = new Date();
 ---
 
 <footer>
-Keep yourself safe! Not sanctioned by Low Tier God, move over FEGLI.
+Keep yourself safe! 
+Not sanctioned by Low Tier God
+Move pver FEGLI.    
 </footer>
 <style>
     footer {
         padding: 2em 1em 6em 1em;
         background: #19181b;
-        color: rgb(var(--white));
+        color: rgb(var(--gray-light));
         text-align: center;
     }
 </style>
