--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-Keep yourself safe! 
-Not sanctioned by Low Tier God
-Move pver FEGLI.    
+Keep yourself safe.
 </footer>
 <style>
     footer {
