--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,6 +5,10 @@ const today = new Date();
 <footer>
 Keep yourself safe.
 </footer>
+<footer>
+fegli
+</footer>
+
 <style>
     footer {
         padding: 2em 1em 6em 1em;
