--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,9 @@ import kysNowImage from './kysnow.jpg'; // Adjust path if needed
       <img src="./kysnow.jpg" alt="You should keep yourself safe NOW!" style="max-width: 300%; height: auto;" />
       <div style="color: white; text-align: center; max-width: 600px; margin-top: 20px;">
     </main>
- <p>Your life literally, is as valuable as a summer ant. I'm just gonna stomp you, and you're gonna keep coming back. I'm gonna seal up all my cracks you're gonna keep coming back, why? Because you keep smelling the syrup, you worthless bitch ass n-. Your life is NOTHING. You serve ZERO purpose, you should kill yourself NOW!</p>
+ <main>
+  <p>Your life literally, is as valuable as a summer ant. I'm just gonna stomp you, and you're gonna keep coming back. I'm gonna seal up all my cracks you're gonna keep coming back, why? Because you keep smelling the syrup, you worthless bitch ass n-. Your life is NOTHING. You serve ZERO purpose, you should kill yourself NOW!</p>
+ </main>
     <Footer />
   </body>
 </html>
