--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ import kysNowImage from './kysnow.jpg'; // Adjust path if needed
       }
     </style>
   </head>
+  <p>fegli</p>
   <body>
     <Header />
     <main style="display: flex; justify-content: center; align-items: center; min-height: 80vh;">
