--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,6 +8,9 @@ If you or someone you know is struggling, please contact a mental health profess
 There is always support available. 
 Love yourself NOW!
 </footer>
+<footer>
+988
+</footer>
 
 <style>
     footer {
