--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,9 @@ import kysNowImage from './kysnow.jpg'; // Adjust path if needed
   <div style="color: white; text-align: center; max-width: 600px; margin-top: 20px;">
     <p>Your life literally, is as valuable as a summer ant. I'm just gonna stomp you, and you're gonna keep coming back. I'm gonna seal up all my cracks you're gonna keep coming back, why? Because you keep smelling the syrup, you worthless bitch ass n-. Your life is NOTHING. You serve ZERO purpose, you should kill yourself</p>
     <h1 style="color: white;">NOW!</h1>
+    <p>"LIMITED ONE DAY ONLY!"</p>
+    <h1>"🎉HAPPY BIRTHDAY!!!!!!🎉"</h1>
+    <small>you should still kill yourself NOW!</small>
   </div>
 </main>
 <footer>
