--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import kysNowImage from './kysnow.jpg'; // Adjust path if needed
     <h1 style="color: white;">NOW!</h1>
     <p>"LIMITED ONE DAY ONLY!"</p>
     <h1>"🎉HAPPY BIRTHDAY!!!!!!🎉"</h1>
-    <small>you should still kill yourself NOW!</small>
+    <small style="color: white;">you should still kill yourself NOW!</small>
   </div>
 </main>
 <footer>
